Overflow issue is fixed

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -6,6 +6,13 @@ margin:0;
 background-color:#fff;
 font-family: Verdana,Arial;
 }
+
+body { overflow-x: hidden !important; }
+
+section {
+   overflow:hidden;
+   }
+
 .navbar-opaque{
 
 background-color: rgba(0,0,0,0.95) !important;
